Fixed bug#11575 - Logo overlaps toolbar when using slim skins.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
@@ -179,6 +179,10 @@
         margin-top: 80px;
     }
 
+    #NavigationContainer > a {
+        display: none !important;
+    }
+
     #Navigation > li {
         background: none;
         float: none;
